--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,88 +1,75 @@
 * {
   box-sizing: border-box;
   transition: 200ms;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: Menlo, "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
     sans-serif;
-  display: grid;
-  justify-content: center;
   background-color: whitesmoke;
   text-align: center;
 }
 
-input {
+input[type="checkbox"] {
   width: 24px;
   height: 24px;
 }
-
 span {
   font-size: 30px;
 }
 
-.InProgress {
-  background-color: rgba(255, 255, 0, 0.601);
-  font-size: 1rem;
-  width: 30%;
-  margin: 0 auto;
-  padding: 20px;
-  border-radius: 12px;
-  margin-top: 10px;
-}
-
 h1 {
+  width: 100%;
   margin: 0;
 }
 
+.done,
+.InProgress {
+  font-size: 1em;
+  width: 30vw;
+  margin: 20px auto;
+  padding: 10px 20px;
+  border-radius: 12px;
+}
 .done {
   background-color: rgba(6, 226, 6, 0.607);
-  font-size: 1rem;
-  width: 30%;
-  margin: 0 auto;
-  margin-top: 20px;
-  padding: 20px;
-  border-radius: 12px;
 }
-
-.red {
-  color: red;
+.InProgress {
+  background-color: rgba(255, 255, 0, 0.601);
 }
-
-.blue {
-  color: blue;
+.done li,
+.InProgress li{
+  font-size: 2em;
+  margin: 5px 0;
 }
-
+.done h1,
+.InProgress h1{
+  padding-bottom: 30px;
+}
 form {
-  width: 500px;
+  width: 30vw;
   margin: auto;
   display: flex;
+  flex-direction: column;
+  gap: 5px;
   align-items: center;
   justify-content: space-between;
-  border: solid 1px #ccc;
   margin-top: 20px;
   border-radius: 12px;
-  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.683);
 }
+
 
 form input,
 form button {
   display: block;
+  width: 100%;
+  padding: 0 20px;
+  font-size: 24px;
   height: 50px;
-  font-size: 18px;
   border-radius: 12px;
   background-color: white;
-}
-
-form input {
-  width: 70%;
-  padding: 10px 20px;
-}
-
-form button {
-  width: 30%;
-  border-right: solid 2px grey;
-  border-left: solid 2px grey;
 }
 
 form button:hover {
@@ -110,13 +97,16 @@ button.active {
 .tag {
   background-color: white;
   padding: 3px 15px;
-  font-size: 14px;
+  font-size: 18px;
   margin-right: 10px;
   border: none;
   box-shadow: 0 0 10px 2px white;
   border-radius: 12px;
 }
-
+#app > div > div{
+  text-align: left;
+  margin-bottom: 10px;
+}
 .tag:hover {
   cursor: pointer;
 }
@@ -125,29 +115,17 @@ button.active {
   background-color: black;
   color: white;
 }
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  transition: 500ms;
-}
-body {
-  background-color: #f5f5f5;
-}
+
 .row {
-  width: 100vw;
   display: flex;
   flex-wrap: wrap;
   padding: 2em 1em;
   text-align: center;
 }
 .column {
-  width: 100%;
   padding: 0.5em 0;
 }
 h1 {
-  width: 100%;
   text-align: center;
   font-size: 3.5em;
   color: #1f003b;
@@ -197,7 +175,6 @@ h1 {
 }
 .column .card:hover {
   background: linear-gradient(#6045ea, #8567f7);
-  color: #ffffff;
 }
 .column .card:hover .img-container {
   transform: scale(1.15);
